[tool.poetry]
name = "ml-forcasting"
version = "0.1.0"
description = ""
authors = ["Chris Roth <chris@preteckt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
